gccida/c2/rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1287:23: error: must use 'enum' tag to refer to type 'rtx_code'
int  rtx_cost( rtx x, rtx_code outer_code) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1306:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v20; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1374:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v32 = ( unsigned __int16 *)v3[1]; 
                           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1379:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v32 = ( unsigned __int16 *)v3[1]; 
                           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1408:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[BYTE2( v9)]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1417:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)v3->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1499:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( rtx)v3[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1595:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v50 = ( __int64)v3[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/cse.c:1626:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v44 = ( __int64 *)v3[1]; 
                  ^~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/rtx_cost/src/obj/cse.o] Error 1
